@@ -359,8 +359,12 @@ __ZN3WTF10StringImplD1Ev
 __ZN3WTF10fastCallocEmm
 __ZN3WTF10fastMallocEm
 __ZN3WTF10fastStrDupEPKc
+__ZN3WTF11OSAllocator16reserveAndCommitEm
+__ZN3WTF11OSAllocator7releaseEPvm
 __ZN3WTF11commentAtomE
 __ZN3WTF11currentTimeEv
+__ZN3WTF11dtoaRoundDPEPcdiRbRiRj
+__ZN3WTF11dtoaRoundSFEPcdiRbRiRj
 __ZN3WTF11fastReallocEPvm
 __ZN3WTF12AtomicString11addSlowCaseEPNS_10StringImplE
 __ZN3WTF12AtomicString3addEPKc
@@ -431,6 +435,7 @@ __ZN3WTF39initializeMainThreadToProcessMainThreadEv
 __ZN3WTF3MD58addBytesEPKhm
 __ZN3WTF3MD58checksumERNS_6VectorIhLm16EEE
 __ZN3WTF3MD5C1Ev
+__ZN3WTF4dtoaEPcdRbRiRj
 __ZN3WTF5Mutex4lockEv
 __ZN3WTF5Mutex6unlockEv
 __ZN3WTF5Mutex7tryLockEv
@@ -545,9 +550,6 @@ __ZNK3JSC8JSObject9toBooleanEPNS_9ExecStateE
 __ZNK3JSC8JSString11resolveRopeEPNS_9ExecStateE
 __ZNK3JSC9HashTable11createTableEPNS_12JSGlobalDataE
 __ZNK3JSC9HashTable11deleteTableEv
-__ZN3WTF11dtoaRoundSFEPcdiRbRiRj
-__ZN3WTF11dtoaRoundDPEPcdiRbRiRj
-__ZN3WTF4dtoaEPcdRbRiRj
 __ZNK3WTF12AtomicString5lowerEv
 __ZNK3WTF13DecimalNumber15toStringDecimalEPtj
 __ZNK3WTF13DecimalNumber28bufferLengthForStringDecimalEv
